--- a/MediaToolkit/MediaToolkit.csproj
+++ b/MediaToolkit/MediaToolkit.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageId>MediaToolkit.NetCore</PackageId>
     <PackageDescription>MediaToolkit port to .Net Core</PackageDescription>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>MediaToolkit</RootNamespace>
   </PropertyGroup>
 
